fixed dark mode about page

--- a/components/about/ourValues/style.module.scss
+++ b/components/about/ourValues/style.module.scss
@@ -4,6 +4,25 @@
    padding: spacing(section-primary-padding);
    background-color: color(bg-soft);
 
+   &.ourValuesDark {
+      background-color: color(input-bg);
+      color: color(primary-white);
+  
+      .ourValuesHead {
+        .ourValuesTitle {
+          color: color(primary-white);
+        }
+      }
+      .ourValuesContent {
+        .ourValuesAccordiaon {
+          .accordiaonHead {
+            color: color(primary-white);
+            border-bottom: 1px solid rgba(color(primary-white), 0.12);
+          }
+        }
+      }
+    }
+
    .ourValuesHead {
       margin-bottom: 5rem;
       .ourValuesTitle {
